nav align fix

--- a/captain_console/static/scss/_header.scss
+++ b/captain_console/static/scss/_header.scss
@@ -24,8 +24,10 @@ nav a {
 }
 .Rbuttons{
   //position: absolute;
-  top: 0;
-  right: 0;
+  //top: 0;
+  //right: 0;
+  margin-left: auto;
+  margin-right: 0;
 }
 
 .search{
